# vhsm

./: LICENSE.MIT  README.md
playground/cryptopp_keyczar_examples/: Makefile  cryptopp_test.cpp  keyczar_test.cpp
playground/cryptopp_keyczar_examples/kc_keys/: 1  meta
playground/files_ipc/: Makefile  message.h  reader.cpp  writer.cpp
playground/hmac_example/: Makefile  OpenSSL_test.pro  main.cpp
playground/netlink/: netlink.c  user.c
playground/netlink_example/kernel/: Makefile  main.c
playground/netlink_example/user/: Makefile  main.cpp
playground/openssl_test_engine/: Makefile  Makefile.Debug  main.c  test.c
playground/openssl_vhsm_engine/: main.c
playground/pkcs11/opencryptoki_sample/: makefile  sample.c
playground/sha1_test_engine/: Makefile.Debug  main.c  test.c
playground/storage_prototype/: Makefile  main.cpp
playground/vhsm_api_prototype/: common.h  digest.h  mac.h
playground/vhsm_api_prototype_impl/: common_impl.c  digest_impl.c  mac_impl.c  transport.h
presentation/: presentation-1.tex  presentation-2.tex  presentation.tex
prototype/: Makefile  copy_vhsm.sh  create_test_structure.sh
prototype/client/: Makefile
prototype/client/openssl_vhsm_engine/: Makefile  README  main.c  test_app.c
prototype/client/test_app/: Makefile  run_tests.sh  test_app.cpp  test_digest.cpp  test_enum_keys.cpp  utils.h
prototype/client/vhsm_api_prototype/: common.h  key_mgmt.h
prototype/client/vhsm_api_prototype_impl/: Makefile  key_mgmt_impl.c  transport.h  transport_impl.cpp  vhsm_api_prototype_impl.pro
prototype/doc/: readme.odt
prototype/files_transport/: FileTransportBase.h  FileTransportMessage.h  FileTransportReceiver.h  FileTransportSender.h  Makefile
prototype/host/: Makefile  host  host.cpp
prototype/netlink_transport/: Makefile  VhsmMessageTransport.cpp  VhsmMessageTransport.h
prototype/netlink_transport/kernel/: Makefile  vhsm_transport.c
prototype/openssl_vhsm_engine/: Makefile.Debug
prototype/protocol/: Makefile  vhsm_transport.proto
prototype/vhsm/: EncryptedStorageFactory.cpp  EncryptedStorageFactory.h  Makefile  MessageHandler.cpp  VhsmStorage.cpp  VhsmStorage.h  common.h  storage.cpp  vhsm.cpp  vhsm.h  vhsm.pro  vhsm_admin.cpp
prototype/vhsm/esapi/: EncryptedStorage.h  Namespace.h  SecretObject.h  Types.h
prototype/vhsm/esapi_file_impl/: ESCypher.cpp  ESCypher.h  EncryptedStorage.cpp  FSESNamespace.cpp  FSESNamespace.h  FSEncryptedStorage.cpp  FSEncryptedStorage.h  FsUtil.h  Makefile
prototype/vhsm_api_prototype/: common.h
prototype/vhsm_api_prototype_impl/: Makefile  digest_impl.c  mac_impl.c  transport_impl.cpp  vhsm_transport.proto
src/: CMakeLists.txt  Makefile  build_project.sh  create_test_structure.sh  run_project.sh  run_project.sh~
src/DEBIAN/: control  postinst  prerm
src/client/: CMakeLists.txt  Makefile
src/client/openssl_vhsm_engine/: Makefile  main.c
src/client/pam/: CMakeLists.txt  pam-passwd-vhsm.cpp  pam-vhsm.cpp  utils.cpp  utils.h
src/client/test_app/: CMakeLists.txt  Makefile  test_app.cpp
src/client/vhsm_admin/: CMakeLists.txt  vhsm_admin.cpp
src/client/vhsm_api_prototype/: Makefile  common.h  key_mgmt.h  mac.h
src/client/vhsm_api_prototype_impl/: CMakeLists.txt  Makefile  common_impl.c  digest_impl.c  key_mgmt_impl.c  mac_impl.c  transport.h  transport_impl.cpp  vhsm_api_prototype_impl.pro
src/doc/: MessageHandler_tests_description.txt  Storage tests description.txt  VHSM tests description.txt  readme.odt  test_scenaries.txt  test_scenarios.txt
src/netlink_transport/: CMakeLists.txt  VhsmMessageTransport.cpp  VhsmMessageTransport.h
src/netlink_transport/kernel/: vhsm_transport.c
src/pkg/: CMakeCommon.txt  CMakeLists.txt
src/pkg/client/: CMakeLists.txt.in
src/pkg/host/: CMakeLists.txt.in  postinst  prerm
src/pkg/server/: CMakeLists.txt.in  postinst  postinst_rpm  postinst_rpm~  prerm
src/protocol/: CMakeLists.txt  Makefile  vhsm_transport.proto
src/test/: CMakeLists.txt  Makefile  reset.sh  run_tests.sh  test_create_key.cpp  test_create_user.sh  test_digest.cpp  test_gen_keys.cpp  test_hmac.cpp  test_install.sh  test_key_mgmt.cpp  test_login.cpp  test_parallel.cpp  utils.cpp
src/test/unit_tests/: CMakeLists.txt  Makefile  MessageHandlerTest.cpp  MessageHandlerTest.h  VhsmStorageTest.cpp  VhsmStorageTest.h  VhsmTest.cpp  VhsmTest.h  keys.db  main.cpp  mh_tests.cpp  storage_tests.cpp  vhsm_mock.cpp  vhsm_storage_mock.cpp  vhsm_tests.cpp
src/vhsm/: CMakeLists.txt  Makefile  MessageHandler.cpp  MessageHandler.h  VhsmStorage.cpp  VhsmStorage.h  vhsm.cpp  vhsm.h  vhsm.pro  vhsm_admin.cpp  vhsm_app.cpp
